unpackaged/main/default/objects/Bulk_Account_Transfer_Field__mdt/Bulk_Account_Transfer_Field__mdt.object-meta.xml
<CustomObject>
    <label>Bulk Account Transfer Field</label>
    <pluralLabel>Bulk Account Transfer Fields</pluralLabel>
</CustomObject>