unpackaged/main/default/objects/Bulk_Account_Transfer_Field__mdt/fields/Column_Order__c.field-meta.xml
<CustomField>
    <fullName>Column_Order__c</fullName>
    <label>Column Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>