unpackaged/main/default/objects/Bulk_Account_Transfer_Field__mdt/fields/Display_Field__c.field-meta.xml
<CustomField>
    <fullName>Display_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Field</label>
    <type>Checkbox</type>
</CustomField>