unpackaged/main/default/objects/Bulk_Account_Transfer_Field__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <metadataRelationshipControllingField>Bulk_Account_Transfer_Field__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Bulk_Account_Transfer_Fields</relationshipLabel>
    <relationshipName>Bulk_Account_Transfer_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>