unpackaged/main/default/objects/Bulk_Account_Transfer_Field__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Bulk_Account_Transfer_Fields</relationshipLabel>
    <relationshipName>Bulk_Account_Transfer_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>